<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_timer"
        android:textColor="@color/primary_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_status"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_question"
        android:contentDescription="@string/icon_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/question_tv"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_answer_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_status" />

    <TextView
        android:id="@+id/tv_answer_1"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/answer_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_one"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/tv_answer_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_answer_3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_answer_2"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/answer_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_two"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/tv_answer_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_answer_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_answer_3"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/answer_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_three"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/tv_answer_text_size"
        app:layout_constraintBottom_toTopOf="@id/btn_go_next"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_answer_4"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/answer_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/answer_four"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/tv_answer_text_size"
        app:layout_constraintBottom_toTopOf="@id/btn_go_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="203dp" />

    <TextView
        android:id="@+id/btn_go_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/next_button"
        android:textColor="@color/primary_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>