<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="60dp"
        android:contentDescription="@string/ic_result"
        app:layout_constraintBottom_toTopOf="@id/ll_tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/ic_lose" />

    <LinearLayout
        android:id="@+id/ll_tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/emoji_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emoji_result">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_selected"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/img_avatar_result"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/avatar_8"
                android:contentDescription="@string/selected_avatar" />

            <TextView
                android:id="@+id/tv_nik_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/your_nickname"
                android:textColor="@color/primary_light"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_score_correct_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="@string/score_correct_answers" />

        <TextView
            android:id="@+id/tv_score_incorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_score_correct_answers"
            tools:text="@string/score_incorrect" />

    </LinearLayout>


    <Button
        android:id="@+id/button_retry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/retry_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/button_go_menu"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_go_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/retry_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="203dp" />


</androidx.constraintlayout.widget.ConstraintLayout>